First commited as before_19693_rev1